# statusline

./: .mypy.ini  Makefile  README.md  TODO.md  __main__.py  git.py  pyproject.toml  setup.py  status.py
.github/workflows/: python-package.yml
statusline/: __main__.py  ansi_patch.py  git.py  pylintrc  status.py
test/: pylintrc  test_git.py  test_status.py
