[tool.poetry]
name = "statusline"
version = "0.1.0"
description = "Display directory and repository stats for statusline."
authors = ["Aaron Moore"]

[tool.poetry.scripts]
statusline = 'statusline.__main__:main'

[tool.poetry.dependencies]
python = "~3.6"
ansi = "^0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
