[tool.poetry]
name = "statusline"
version = "0.1.0"
description = "Display directory and repository stats for statusline."
authors = ["Aaron Moore"]

[tool.poetry.scripts]
statusline = 'statusline.__main__:main'

[tool.poetry.dependencies]
python = ">=3.7,<4"
ansi = "^0.1"
pygit2 = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pylint = "^2.7.2"
pylint-quotes = "^0.2.1"
pylint-pytest = "^0.3.0"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
