[tool.poetry]
name = "statusline"
version = "0.1.0"
description = "Display directory and repository stats for statusline."
authors = ["Aaron Moore"]

[tool.poetry.scripts]
statusline = 'statusline.__main__:main'

[tool.poetry.dependencies]
python = "^3.11"
ansi = "^0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pylint = "^2.17.5"
pylint-quotes = "^0.2.3"
pylint-pytest = "^1.1.2"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
